syntax = "proto3";

package userservice.v1;

option go_package = "./grpc/v1";

import "google/api/annotations.proto";
import "common.proto";

service UsersService {
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse) {
    option (google.api.http) = {
      get: "/v1/users/{id}"
    };
  }

  rpc LoginUserByEmail(LoginUserByEmailRequest) returns (LoginUserResponse);
  rpc LoginUserByUsername(LoginUserByUsernameRequest) returns (LoginUserResponse);

  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message GetUserByIDRequest {
  int64 id = 1;
}

message GetUserByIDResponse {
  common.v1.User user = 1;
}

message LoginUserByEmailRequest {
  string email = 1;
  string password = 2;
}

message LoginUserByUsernameRequest {
  string username = 1;
  string password = 2;
}

message LoginUserResponse {
  common.v1.User user = 1;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
  string username = 3;
}

message CreateUserResponse {
  common.v1.User user = 1;
}
